--- a/contato.html
+++ b/contato.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculo Fulano de Tal</title>
 </head>
 
@@ -29,26 +29,26 @@ como fonte externa).
         </ul>
     </nav>
     <main>
-        <img src="img/avatar.jpg" height="200px" alt="Foto do Fulano de Tal" />
+        <img src="img/avatar.jpg" height="200" alt="Foto do Fulano de Tal" >
         <form action="#">
             <div>
-                <label for="nome">Nome</label><br />
+                <label for="nome">Nome</label><br>
                 <input type="text" name="nome" id="nome" placeholder="Digite seu nome" />
             </div>
             <div>
-                <label for="email">E-mail</label><br />
+                <label for="email">E-mail</label><br>
                 <input type="email" name="email" id="email" placeholder="Digite seu e-mail" />
             </div>
             <div>
-                <label for="telefone">Telefone</label><br />
+                <label for="telefone">Telefone</label><br>
                 <input type="tel" name="telefone" id="telefone" placeholder="Digite seu telefone" />
             </div>
             <div>
-                <label for="recrutador">Recrutador?</label><br />
+                <label for="recrutador">Recrutador?</label><br>
                 <input type="checkbox" name="recrutador" id="recrutador" />
             </div>
             <div>
-                <label for="mensagem">Mensagem</label><br />
+                <label for="mensagem">Mensagem</label><br>
                 <textarea name="mensagem" id="mensagem" cols="30" rows="10"
                     placeholder="Digite sua mensagem"></textarea>
             </div>
