--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Curriculo Fulano de Tal</title>
 </head>
 
@@ -31,7 +31,7 @@ apontar para o site das instituições/empresas
     <header>
       <h1>Fulano de Tal</h1>
       <picture>
-        <img src="img/avatar.jpg" height="200px" alt="Foto do Fulano de Tal" />
+        <img src="img/avatar.jpg" height="200" alt="Foto do Fulano de Tal">
       </picture>
       <p>
         <a href="https://br.freepik.com/fotos-gratis/um-homem-esta-sentado-em-uma-mesa-em-frente-a-uma-tela-de-computador-que-diz-negocios_41192053.htm#query=enteprenour&position=2&from_view=search&track=ais_ai_generated"
