--- a/contato.html
+++ b/contato.html
@@ -29,7 +29,7 @@ como fonte externa).
         </ul>
     </nav>
     <main>
-        <img src="img/avatar.jpg" height="200" alt="Foto do Fulano de Tal" >
+        <img src="img/avatar.jpg" height="200" alt="Foto do Fulano de Tal">
         <form action="#">
             <div>
                 <label for="nome">Nome</label><br>
@@ -53,7 +53,7 @@ como fonte externa).
                     placeholder="Digite sua mensagem"></textarea>
             </div>
             <div>
-                <input type="submit" value="Enviar" />
+                <input type="submit" value="Enviar">
             </div>
         </form>
     </main>
