correcao erros w3c validator

--- a/contato.html
+++ b/contato.html
@@ -33,19 +33,19 @@ como fonte externa).
         <form action="#">
             <div>
                 <label for="nome">Nome</label><br>
-                <input type="text" name="nome" id="nome" placeholder="Digite seu nome" />
+                <input type="text" name="nome" id="nome" placeholder="Digite seu nome">
             </div>
             <div>
                 <label for="email">E-mail</label><br>
-                <input type="email" name="email" id="email" placeholder="Digite seu e-mail" />
+                <input type="email" name="email" id="email" placeholder="Digite seu e-mail">
             </div>
             <div>
                 <label for="telefone">Telefone</label><br>
-                <input type="tel" name="telefone" id="telefone" placeholder="Digite seu telefone" />
+                <input type="tel" name="telefone" id="telefone" placeholder="Digite seu telefone">
             </div>
             <div>
                 <label for="recrutador">Recrutador?</label><br>
-                <input type="checkbox" name="recrutador" id="recrutador" />
+                <input type="checkbox" name="recrutador" id="recrutador">
             </div>
             <div>
                 <label for="mensagem">Mensagem</label><br>
