--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ apontar para o site das instituições/empresas
   </nav>
   <main>
     <header>
-      <h1>Fulano de Tal</h1>
+      <h1>Curriculo de Fulano de Tal</h1>
       <picture>
         <img src="img/avatar.jpg" height="200" alt="Foto do Fulano de Tal">
       </picture>
