restruturacao de pasta, adicao trabalho2

--- a/index.html
+++ b/index.html
@@ -1,187 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Curriculo Fulano de Tal</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trabalhos UFU BSI PPI</title>
 </head>
 
 <body>
-  <!--
-        Página principal (index.html)
-• Deve conter:
-o Foto, nome, principais competências, formação acadêmica e experiência
-profissional, contato
-o Um menu superior com hiperlinks para cada uma das seções
-o Utilize ícones (como imagens) gratuitos de https://br.freepik.com/
-o Utilize hiperlinks na seção de formação acadêmica e experiência profissional para
-apontar para o site das instituições/empresas
-
-    -->
-  <nav>
     <ul>
-      <li><a href="#competencias">Competências</a></li>
-      <li><a href="#formacao">Formação Acadêmica</a></li>
-      <li><a href="#experiencia">Experiência</a></li>
-      <li><a href="#contato">Contato</a></li>
+        <li><a href="trabalho1/index.html">Trabalho 1</a></li>
+        <li><a href="trabalho2/index.html">Trabalho 2</a></li>
     </ul>
-  </nav>
-  <main>
-    <header>
-      <h1>Curriculo de Fulano de Tal</h1>
-      <picture>
-        <img src="img/avatar.jpg" height="200" alt="Foto do Fulano de Tal">
-      </picture>
-      <p>
-        <a href="https://br.freepik.com/fotos-gratis/um-homem-esta-sentado-em-uma-mesa-em-frente-a-uma-tela-de-computador-que-diz-negocios_41192053.htm#query=enteprenour&position=2&from_view=search&track=ais_ai_generated"
-          rel="noopener noreferrer" target="_blank">Imagem de Sketchepedia</a>
-        no Freepik
-      </p>
-    </header>
-    <section id="competencias">
-      <h2>Competências</h2>
-      <ul>
-        <li>
-          Domínio avançado em todos os 5.876 idiomas de programação
-          existentes, incluindo os que ainda serão inventados até 2050.
-        </li>
-        <li>
-          Capacidade de gerar ROI de 5.000% com apenas um pensamento
-          estratégico durante o sono.
-        </li>
-        <li>
-          Certificação em telepatia para entender as necessidades dos clientes
-          antes mesmo de eles saberem o que querem.
-        </li>
-        <li>
-          Habilidade única de codificar com os pés enquanto prepara um café
-          gourmet com as mãos.
-        </li>
-        <li>
-          Desenvolvimento de IA em 5 minutos durante o intervalo do almoço,
-          utilizando apenas um guardanapo e uma caneta.
-        </li>
-        <li>
-          Experiência em construir startups unicórnio em 24 horas com um
-          orçamento de $10.
-        </li>
-        <li>
-          Capacidade de otimizar qualquer site para carregar instantaneamente,
-          independentemente da conexão de internet.
-        </li>
-        <li>
-          Networking tão avançado que até extraterrestres fazem contato para
-          parcerias de negócios.
-        </li>
-        <li>
-          Maestria em liderança: motivando equipes com apenas um olhar e
-          inspirando ovacionados aplausos com um simples espirro.
-        </li>
-        <li>
-          Competência em multitarefa: conduz reuniões internacionais, codifica
-          uma nova rede social e treina para uma maratona, tudo
-          simultaneamente.
-        </li>
-      </ul>
-    </section>
-    <section id="formacao">
-      <h2>Formação Academica</h2>
-      <ul>
-        <li>
-          <a href="https://www.harvard.edu/" target="_blank">Harvard University</a>
-          (Início: 1 a.C. - Fim: 1 d.C.)
-        </li>
-        <li>
-          <a href="https://www.stanford.edu/" target="_blank">Stanford University</a>
-          (Início: Ano do Dragão - Fim: Ano do Unicórnio)
-        </li>
-        <li>
-          <a href="http://web.mit.edu/" target="_blank">Massachusetts Institute of Technology (MIT)</a>
-          (Início: Durante a Era Glacial - Fim: Quando os pinguins voaram)
-        </li>
-        <li>
-          <a href="https://www.caltech.edu/" target="_blank">California Institute of Technology (Caltech)</a>
-          (Início: No reinado de Rei Artur - Fim: Quando Excalibur foi
-          encontrada em um bazar)
-        </li>
-        <li>
-          <a href="https://www.ox.ac.uk/" target="_blank">University of Oxford</a>
-          (Início: Ano 0 - Fim: Quando o calendário decidiu começar a contar)
-        </li>
-        <li>
-          <a href="https://www.cam.ac.uk/" target="_blank">University of Cambridge</a>
-          (Início: Durante a Invasão Viking - Fim: Na última festa Viking)
-        </li>
-        <li>
-          <a href="https://www.uchicago.edu/" target="_blank">University of Chicago</a>
-          (Início: Era uma vez - Fim: E viveram felizes para sempre)
-        </li>
-        <li>
-          <a href="https://www.imperial.ac.uk/" target="_blank">Imperial College London</a>
-          (Início: Quando o chá foi apenas uma folha - Fim: Quando o chá virou
-          a bebida mais famosa)
-        </li>
-        <li>
-          <a href="https://www.ethz.ch/en.html" target="_blank">Swiss Federal Institute of Technology (ETH Zurich)</a>
-          (Início: Quando os relógios eram solares - Fim: Quando os relógios
-          suíços decidiram ser pontuais)
-        </li>
-        <li>
-          <a href="https://www.berkeley.edu/" target="_blank">University of California, Berkeley</a>
-          (Início: Na era hippie - Fim: Quando as flores decidiram fazer uma
-          revolução)
-        </li>
-      </ul>
-    </section>
-    <section id="experiencia">
-      <h2>Experiência Profissional</h2>
-      <ul>
-        <li><strong>CEO Supremo e Visionário Principal</strong> – Google</li>
-
-        <li>
-          <strong>Diretor Global de Inovação e Magia</strong> – Apple Inc.
-        </li>
-
-        <li>
-          <strong>Arquiteto Chefe de Realidades Alternativas</strong> –
-          Microsoft
-        </li>
-
-        <li>
-          <strong>Professor de Tecnologia Quântica e Artes Obscuras</strong> –
-          Universidade de Oxford
-        </li>
-
-        <li>
-          <strong>Presidente Benevolente e Todo-Poderoso</strong> – República
-          de Techlandia
-        </li>
-      </ul>
-
-      <h3>
-        <a href="experiencia.html">Veja as experiências profissionais em detalhes</a>
-      </h3>
-    </section>
-    <section id="contato">
-      <h2>Contato</h2>
-      <p><strong>Email:</strong> fulano.detalo@email.com</p>
-      <p><strong>Telefone:</strong> +55 11 99999-8888</p>
-      <p><strong>Mídias Sociais:</strong></p>
-      <ul>
-        <li>
-          <a href="#" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-        </li>
-        <li>
-          <a href="#" target="_blank" rel="noopener noreferrer">Twitter</a>
-        </li>
-        <li>
-          <a href="#" target="_blank" rel="noopener noreferrer">GitHub</a>
-        </li>
-      </ul>
-      <h3><a href="contato.html">Clique aqui para entrar em contato</a></h3>
-    </section>
-  </main>
 </body>
 
 </html>
