--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="trabalho1/index.html">Trabalho 1</a></li>
         <li><a href="trabalho2/index.html">Trabalho 2</a></li>
+        <li><a href="trabalho3/index.html">Trabalho 3</a></li>
     </ul>
 </body>
 
