--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="trabalho2/index.html">Trabalho 2</a></li>
         <li><a href="trabalho3/index.html">Trabalho 3</a></li>
         <li><a href="trabalho4/index.html">Trabalho 4</a></li>
+        <li><a href="trabalho5/index.html">Trabalho 5</a></li>
     </ul>
 </body>
 
