troca de links com erro

--- a/trabalho-final-parte2/jogos/variados/index.html
+++ b/trabalho-final-parte2/jogos/variados/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Lembre-se de mim</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/global.css" />
-    <link rel="stylesheet" href="/css/jogo.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/jogo.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand text-wrap" href="/">
           <img
-            src="/img/logo.svg"
+            src="img/logo.svg"
             class="img-fluid"
             alt="logomarca - imagem vetorizada de um panda deitado pela lateral"
             width="50"
@@ -89,7 +89,7 @@
           <div class="card flip-card-inner" data-animal-id="boto-cor-de-rosa">
             <div class="flip-card-back">
               <img
-                src="/img/boto-pequeno.webp"
+                src="img/boto-pequeno.webp"
                 class="card-img-top"
                 alt="boto-cor-de-rosa"
                 width="333"
@@ -108,7 +108,7 @@
               class="flip-card-front d-flex flex-column justify-content-start"
             >
               <img
-                src="/img/card-back.webp"
+                src="img/card-back.webp"
                 class="card-img-top"
                 alt="Desenho de verso da carta, contendo dois animais centralizados, onça pintada e arara azul, ao fundo uma floresta cortado por um rio"
                 width="143"
@@ -127,7 +127,7 @@
           <div class="card flip-card-inner" data-animal-id="jabuti">
             <div class="flip-card-back">
               <img
-                src="/img/jabuti-pequeno.webp"
+                src="img/jabuti-pequeno.webp"
                 class="card-img-top"
                 alt="jabuti"
                 width="187"
@@ -150,7 +150,7 @@
               class="flip-card-front d-flex flex-column justify-content-start"
             >
               <img
-                src="/img/card-back.webp"
+                src="img/card-back.webp"
                 class="card-img-top"
                 alt="Desenho de verso da carta, contendo dois animais centralizados, onça pintada e arara azul, ao fundo uma floresta cortado por um rio"
                 width="143"
@@ -169,7 +169,7 @@
           <div class="card flip-card-inner" data-animal-id="tucano">
             <div class="flip-card-back">
               <img
-                src="/img/tucano-pequeno.webp"
+                src="img/tucano-pequeno.webp"
                 class="card-img-top"
                 alt="tucano"
                 width="405"
@@ -190,7 +190,7 @@
               class="flip-card-front d-flex flex-column justify-content-start"
             >
               <img
-                src="/img/card-back.webp"
+                src="img/card-back.webp"
                 class="card-img-top"
                 alt="Desenho de verso da carta, contendo dois animais centralizados, onça pintada e arara azul, ao fundo uma floresta cortado por um rio"
                 width="143"
@@ -209,7 +209,7 @@
           <div class="card flip-card-inner" data-animal-id="onça">
             <div class="flip-card-back">
               <img
-                src="/img/onca-pequeno.webp"
+                src="img/onca-pequeno.webp"
                 class="card-img-top"
                 alt="onça"
                 width="250"
@@ -230,7 +230,7 @@
               class="flip-card-front d-flex flex-column justify-content-start"
             >
               <img
-                src="/img/card-back.webp"
+                src="img/card-back.webp"
                 class="card-img-top"
                 alt="Desenho de verso da carta, contendo dois animais centralizados, onça pintada e arara azul, ao fundo uma floresta cortado por um rio"
                 width="143"
@@ -249,7 +249,7 @@
           <div class="card flip-card-inner" data-animal-id="arara-azul">
             <div class="flip-card-back">
               <img
-                src="/img/arara-azul-pequeno.webp"
+                src="img/arara-azul-pequeno.webp"
                 class="card-img-top"
                 alt="arara-azul"
                 width="375"
@@ -270,7 +270,7 @@
               class="flip-card-front d-flex flex-column justify-content-start"
             >
               <img
-                src="/img/card-back.webp"
+                src="img/card-back.webp"
                 class="card-img-top"
                 alt="Desenho de verso da carta, contendo dois animais centralizados, onça pintada e arara azul, ao fundo uma floresta cortado por um rio"
                 width="143"
@@ -289,7 +289,7 @@
           <div class="card flip-card-inner" data-animal-id="tucano">
             <div class="flip-card-back">
               <img
-                src="/img/tucano-pequeno.webp"
+                src="img/tucano-pequeno.webp"
                 class="card-img-top"
                 alt="tucano"
                 width="405"
@@ -310,7 +310,7 @@
               class="flip-card-front d-flex flex-column justify-content-start"
             >
               <img
-                src="/img/card-back.webp"
+                src="img/card-back.webp"
                 class="card-img-top"
                 alt="Desenho de verso da carta, contendo dois animais centralizados, onça pintada e arara azul, ao fundo uma floresta cortado por um rio"
                 width="143"
@@ -329,7 +329,7 @@
           <div class="card flip-card-inner" data-animal-id="jabuti">
             <div class="flip-card-back">
               <img
-                src="/img/jabuti-pequeno.webp"
+                src="img/jabuti-pequeno.webp"
                 class="card-img-top"
                 alt="jabuti"
                 width="187"
@@ -352,7 +352,7 @@
               class="flip-card-front d-flex flex-column justify-content-start"
             >
               <img
-                src="/img/card-back.webp"
+                src="img/card-back.webp"
                 class="card-img-top"
                 alt="Desenho de verso da carta, contendo dois animais centralizados, onça pintada e arara azul, ao fundo uma floresta cortado por um rio"
                 width="143"
@@ -371,7 +371,7 @@
           <div class="card flip-card-inner" data-animal-id="onça">
             <div class="flip-card-back">
               <img
-                src="/img/onca-pequeno.webp"
+                src="img/onca-pequeno.webp"
                 class="card-img-top"
                 alt="onça"
                 width="250"
@@ -392,7 +392,7 @@
               class="flip-card-front d-flex flex-column justify-content-start"
             >
               <img
-                src="/img/card-back.webp"
+                src="img/card-back.webp"
                 class="card-img-top"
                 alt="Desenho de verso da carta, contendo dois animais centralizados, onça pintada e arara azul, ao fundo uma floresta cortado por um rio"
                 width="143"
@@ -411,7 +411,7 @@
           <div class="card flip-card-inner" data-animal-id="boto-cor-de-rosa">
             <div class="flip-card-back">
               <img
-                src="/img/boto-pequeno.webp"
+                src="img/boto-pequeno.webp"
                 class="card-img-top"
                 alt="boto-cor-de-rosa"
                 width="333"
@@ -430,7 +430,7 @@
               class="flip-card-front d-flex flex-column justify-content-start"
             >
               <img
-                src="/img/card-back.webp"
+                src="img/card-back.webp"
                 class="card-img-top"
                 alt="Desenho de verso da carta, contendo dois animais centralizados, onça pintada e arara azul, ao fundo uma floresta cortado por um rio"
                 width="143"
@@ -449,7 +449,7 @@
           <div class="card flip-card-inner" data-animal-id="pirarucu">
             <div class="flip-card-back">
               <img
-                src="/img/pirarucu-pequeno.webp"
+                src="img/pirarucu-pequeno.webp"
                 class="card-img-top"
                 alt="pirarucu"
                 width="333"
@@ -470,7 +470,7 @@
               class="flip-card-front d-flex flex-column justify-content-start"
             >
               <img
-                src="/img/card-back.webp"
+                src="img/card-back.webp"
                 class="card-img-top"
                 alt="Desenho de verso da carta, contendo dois animais centralizados, onça pintada e arara azul, ao fundo uma floresta cortado por um rio"
                 width="143"
@@ -489,7 +489,7 @@
           <div class="card flip-card-inner" data-animal-id="arara-azul">
             <div class="flip-card-back">
               <img
-                src="/img/arara-azul-pequeno.webp"
+                src="img/arara-azul-pequeno.webp"
                 class="card-img-top"
                 alt="arara-azul"
                 width="375"
@@ -510,7 +510,7 @@
               class="flip-card-front d-flex flex-column justify-content-start"
             >
               <img
-                src="/img/card-back.webp"
+                src="img/card-back.webp"
                 class="card-img-top"
                 alt="Desenho de verso da carta, contendo dois animais centralizados, onça pintada e arara azul, ao fundo uma floresta cortado por um rio"
                 width="143"
@@ -529,7 +529,7 @@
           <div class="card flip-card-inner" data-animal-id="pirarucu">
             <div class="flip-card-back">
               <img
-                src="/img/pirarucu-pequeno.webp"
+                src="img/pirarucu-pequeno.webp"
                 class="card-img-top"
                 alt="pirarucu"
                 width="333"
@@ -550,7 +550,7 @@
               class="flip-card-front d-flex flex-column justify-content-start"
             >
               <img
-                src="/img/card-back.webp"
+                src="img/card-back.webp"
                 class="card-img-top"
                 alt="Desenho de verso da carta, contendo dois animais centralizados, onça pintada e arara azul, ao fundo uma floresta cortado por um rio"
                 width="143"
