--- a/trabalho-final-parte2/admin/index.html
+++ b/trabalho-final-parte2/admin/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Lembre-se de mim</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/global.css" />
-    <link rel="stylesheet" href="/css/admin.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/admin.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand text-wrap" href="/">
           <img
-            src="/img/logo.svg"
+            src="img/logo.svg"
             class="img-fluid"
             alt="logomarca - imagem vetorizada de um panda deitado pela lateral"
             width="50"
