--- a/trabalho-final-parte2/lista/index.html
+++ b/trabalho-final-parte2/lista/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Lembre-se de mim</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/global.css" />
-    <link rel="stylesheet" href="/css/lista.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/lista.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand text-wrap" href="/">
           <img
-            src="/img/logo.svg"
+            src="img/logo.svg"
             class="img-fluid"
             alt="logomarca - imagem vetorizada de um panda deitado pela lateral"
             width="50"
@@ -96,7 +96,7 @@
             <div class="row g-0 h-100">
               <div class="col-md-4 h-100">
                 <img
-                  src="/img/arara-azul-grande.webp"
+                  src="img/arara-azul-grande.webp"
                   class="img-fluid rounded-start"
                   alt="imagem de arara-azul"
                   width="450"
@@ -132,7 +132,7 @@
             <div class="row g-0 h-100">
               <div class="col-md-4 h-100">
                 <img
-                  src="/img/boto-grande.webp"
+                  src="img/boto-grande.webp"
                   class="img-fluid rounded-start"
                   alt="imagem de boto-cor-de-rosa"
                   width="450"
@@ -169,7 +169,7 @@
             <div class="row g-0 h-100">
               <div class="col-md-4 h-100">
                 <img
-                  src="/img/jabuti-grande.webp"
+                  src="img/jabuti-grande.webp"
                   class="img-fluid rounded-start"
                   alt="imagem de jabuti"
                   width="450"
@@ -204,7 +204,7 @@
             <div class="row g-0 h-100">
               <div class="col-md-4 h-100">
                 <img
-                  src="/img/onca-grande.webp"
+                  src="img/onca-grande.webp"
                   class="img-fluid rounded-start"
                   alt="imagem de onça"
                   width="450"
@@ -241,7 +241,7 @@
             <div class="row g-0 h-100">
               <div class="col-md-4 h-100">
                 <img
-                  src="/img/pirarucu-grande.webp"
+                  src="img/pirarucu-grande.webp"
                   class="img-fluid rounded-start"
                   alt="imagem de pirarucu"
                   width="450"
@@ -277,7 +277,7 @@
             <div class="row g-0 h-100">
               <div class="col-md-4 h-100">
                 <img
-                  src="/img/tucano-grande.webp"
+                  src="img/tucano-grande.webp"
                   class="img-fluid rounded-start"
                   alt="imagem de tucano"
                   width="450"
