correção de links

--- a/trabalho-final-parte2/index.html
+++ b/trabalho-final-parte2/index.html
@@ -36,18 +36,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link false" aria-current="page" href="/jogos"
+              <a class="nav-link false" aria-current="page" href="jogos"
                 >Jogar</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link false" href="/lista">Animais</a>
+              <a class="nav-link false" href="lista">Animais</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link false" href="/ranking">Ranking</a>
+              <a class="nav-link false" href="ranking">Ranking</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link false" href="/sobre">Sobre</a>
+              <a class="nav-link false" href="sobre">Sobre</a>
             </li>
           </ul>
           <ul class="navbar-nav mb-2 mb-lg-0 justify-content-end">
@@ -62,11 +62,11 @@
                 Usuário
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/admin">Admin</a></li>
+                <li><a class="dropdown-item" href="admin">Admin</a></li>
 
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="/login">Login</a>
+                  <a class="dropdown-item" href="login">Login</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="#">Logout</a>
@@ -115,28 +115,28 @@
               <a href="/" target="_blank">Página Inicial</a>
             </li>
             <li>
-              <a href="/jogos" target="_blank">Lista de Jogos</a>
+              <a href="jogos" target="_blank">Lista de Jogos</a>
             </li>
             <li>
-              <a href="/jogos/variados" target="_blank">Jogo de exemplo</a>
+              <a href="jogos/variados" target="_blank">Jogo de exemplo</a>
             </li>
             <li>
-              <a href="/lista" target="_blank">Lista de animais</a>
+              <a href="lista" target="_blank">Lista de animais</a>
             </li>
             <li>
-              <a href="/ranking" target="_blank">Ranking de Jogadores</a>
+              <a href="ranking" target="_blank">Ranking de Jogadores</a>
             </li>
             <li>
-              <a href="/sobre" target="_blank">Sobre</a>
+              <a href="sobre" target="_blank">Sobre</a>
             </li>
             <li>
-              <a href="/login" target="_blank">Login</a>
+              <a href="login" target="_blank">Login</a>
             </li>
             <li>
-              <a href="/cadastro" target="_blank">Cadastro de usuário</a>
+              <a href="cadastro" target="_blank">Cadastro de usuário</a>
             </li>
             <li>
-              <a href="/admin" target="_blank">Página administrativa</a>
+              <a href="admin" target="_blank">Página administrativa</a>
             </li>
           </ul>
         </div>
@@ -146,6 +146,6 @@
       Trabalho de programação para internet feito por: Guilherme Castilho e
       Lucas Souza
     </footer>
-    <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
