--- a/trabalho-final-parte2/jogos/index.html
+++ b/trabalho-final-parte2/jogos/index.html
@@ -37,18 +37,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/jogos"
+              <a class="nav-link active" aria-current="page" href="jogos"
                 >Jogar</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link false" href="/lista">Animais</a>
+              <a class="nav-link false" href="lista">Animais</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link false" href="/ranking">Ranking</a>
+              <a class="nav-link false" href="ranking">Ranking</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link false" href="/sobre">Sobre</a>
+              <a class="nav-link false" href="sobre">Sobre</a>
             </li>
           </ul>
           <ul class="navbar-nav mb-2 mb-lg-0 justify-content-end">
@@ -63,11 +63,11 @@
                 Usuário
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/admin">Admin</a></li>
+                <li><a class="dropdown-item" href="admin">Admin</a></li>
 
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="/login">Login</a>
+                  <a class="dropdown-item" href="login">Login</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="#">Logout</a>
@@ -84,77 +84,77 @@
           <div class="card-body">
             <h5 class="card-title">Animais Variados</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Fácil</h6>
-            <a href="/jogos/variados" class="card-link">Jogar</a>
+            <a href="jogos/variados" class="card-link">Jogar</a>
           </div>
         </div>
         <div class="card text-center">
           <div class="card-body">
             <h5 class="card-title">Mamíferos</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Médio</h6>
-            <a href="/jogos/variados" class="card-link">Jogar</a>
+            <a href="jogos/variados" class="card-link">Jogar</a>
           </div>
         </div>
         <div class="card text-center">
           <div class="card-body">
             <h5 class="card-title">Animais Aquáticos</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Difícil</h6>
-            <a href="/jogos/variados" class="card-link">Jogar</a>
+            <a href="jogos/variados" class="card-link">Jogar</a>
           </div>
         </div>
         <div class="card text-center">
           <div class="card-body">
             <h5 class="card-title">Aves</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Difícil</h6>
-            <a href="/jogos/variados" class="card-link">Jogar</a>
+            <a href="jogos/variados" class="card-link">Jogar</a>
           </div>
         </div>
         <div class="card text-center">
           <div class="card-body">
             <h5 class="card-title">Répteis</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Médio</h6>
-            <a href="/jogos/variados" class="card-link">Jogar</a>
+            <a href="jogos/variados" class="card-link">Jogar</a>
           </div>
         </div>
         <div class="card text-center">
           <div class="card-body">
             <h5 class="card-title">Anfíbios</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Médio</h6>
-            <a href="/jogos/variados" class="card-link">Jogar</a>
+            <a href="jogos/variados" class="card-link">Jogar</a>
           </div>
         </div>
         <div class="card text-center">
           <div class="card-body">
             <h5 class="card-title">Invertebrados</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Difícil</h6>
-            <a href="/jogos/variados" class="card-link">Jogar</a>
+            <a href="jogos/variados" class="card-link">Jogar</a>
           </div>
         </div>
         <div class="card text-center">
           <div class="card-body">
             <h5 class="card-title">Animais de Estimação</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Fácil</h6>
-            <a href="/jogos/variados" class="card-link">Jogar</a>
+            <a href="jogos/variados" class="card-link">Jogar</a>
           </div>
         </div>
         <div class="card text-center">
           <div class="card-body">
             <h5 class="card-title">Animais Selvagens</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Difícil</h6>
-            <a href="/jogos/variados" class="card-link">Jogar</a>
+            <a href="jogos/variados" class="card-link">Jogar</a>
           </div>
         </div>
         <div class="card text-center">
           <div class="card-body">
             <h5 class="card-title">Animais Noturnos</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Médio</h6>
-            <a href="/jogos/variados" class="card-link">Jogar</a>
+            <a href="jogos/variados" class="card-link">Jogar</a>
           </div>
         </div>
         <div class="card text-center">
           <div class="card-body">
             <h5 class="card-title">Insetos</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Fácil</h6>
-            <a href="/jogos/variados" class="card-link">Jogar</a>
+            <a href="jogos/variados" class="card-link">Jogar</a>
           </div>
         </div>
       </div>
@@ -163,6 +163,6 @@
       Trabalho de programação para internet feito por: Guilherme Castilho e
       Lucas Souza
     </footer>
-    <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
