--- a/trabalho-final-parte2/jogos/variados/index.html
+++ b/trabalho-final-parte2/jogos/variados/index.html
@@ -37,18 +37,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/jogos"
+              <a class="nav-link active" aria-current="page" href="jogos"
                 >Jogar</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link false" href="/lista">Animais</a>
+              <a class="nav-link false" href="lista">Animais</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link false" href="/ranking">Ranking</a>
+              <a class="nav-link false" href="ranking">Ranking</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link false" href="/sobre">Sobre</a>
+              <a class="nav-link false" href="sobre">Sobre</a>
             </li>
           </ul>
           <ul class="navbar-nav mb-2 mb-lg-0 justify-content-end">
@@ -63,11 +63,11 @@
                 Usuário
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/admin">Admin</a></li>
+                <li><a class="dropdown-item" href="admin">Admin</a></li>
 
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="/login">Login</a>
+                  <a class="dropdown-item" href="login">Login</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="#">Logout</a>
@@ -571,7 +571,7 @@
       Trabalho de programação para internet feito por: Guilherme Castilho e
       Lucas Souza
     </footer>
-    <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/jogo.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/jogo.js"></script>
   </body>
 </html>
